Adicionando arquivos de inicializacao

--- a/home.html
+++ b/home.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-    sdffsf
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Meu Site</a>
@@ -25,6 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                     <a class="nav-link " href="features.html">Features</a>
                     <a class="nav-link " href="pricing.html">Pricing</a>
+                    <a class="nav-link " href="javascripts.html">javascripts</a>
                 </div>
             </div>
         </div>
@@ -101,6 +101,7 @@
             <span class="text-muted">Place sticky footer content here.</span>
         </div>
     </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
