--- a/javascripts.html
+++ b/javascripts.html
@@ -12,6 +12,22 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Meu Site</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                    <a class="nav-link " href="features.html">Features</a>
+                    <a class="nav-link " href="pricing.html">Pricing</a>
+                    <a class="nav-link " href="javascripts.html">javascripts</a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <h1 id="h1Demo">???????????</h1>
 
     <h1 id="h2Demo">???????????</h1>
