--- a/pricing.html
+++ b/pricing.html
@@ -22,6 +22,8 @@
                     <a class="nav-link " aria-current="page" href="home.html">Home</a>
                     <a class="nav-link " href="features.html">Features</a>
                     <a class="nav-link active" href="pricing.html">Pricing</a>
+                    <a class="nav-link " href="javascripts.html">javascripts</a>
+
                 </div>
             </div>
         </div>
