--- a/inicializacao.html
+++ b/inicializacao.html
@@ -28,7 +28,7 @@
     </script>
 
 
-    <script src="js/inicializacao.js" async defer></script>
+    <script src="js/aulas/inicializacao.js" async defer></script>
 </body>
 
 </html>
