--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -8,72 +8,89 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Meu Site</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Meu Site</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="../home.html">Home</a>
-                <a class="nav-link " href="features.html">Features</a>
-                <a class="nav-link " href="../pricing.html">Pricing</a>
-                <a class="nav-link " href="../javascripts.html">javascripts</a>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="../home.html">Home</a>
+                    <a class="nav-link " href="features.html">Features</a>
+                    <a class="nav-link " href="../pricing.html">Pricing</a>
+                    <a class="nav-link " href="../javascripts.html">javascripts</a>
+                </div>
             </div>
         </div>
+    </nav>
+
+    <p></p>
+
+    <div class="row">
+        <div class="col-sm">
+
+        </div>
+        <div class="col-sm">
+            <div class="card">
+                <div class="card-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="nome" class="form-label">Nome</label>
+                            <input type="text" class="form-control" id="nome">
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="idade" class="form-label">Idade</label>
+                            <input type="number" class="form-control" id="idade">
+                            <div id="validacaoIdade" class="text-danger text-cen"></div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="naturalidade" class="form-label">Naturalidade</label>
+                            <input type="text" class="form-control" id="naturalidade">
+                            <div id="validacaoNaturalidade" class="text-danger"></div>
+                        </div>
+
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="antecedentesCriminais">
+                            <label class="form-check-label" for="antecedentesCriminais">Possui antecedentes criminais?</label>
+                            <div id="validacaoAntecedentes" class="text-danger"></div>
+                        </div>
+                    </form>
+                    <div class="d-grid gap-1">
+                        <button onclick="cadastrar()" class="btn btn-primary">CADASTRAR</button>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="col-sm">
+
+        </div>
     </div>
-</nav>
 
-<p></p>
 
-<form>
-    <div class="mb-3">
-        <label for="nome" class="form-label">Nome</label>
-        <input type="text" class="form-control" id="nome">
-    </div>
 
-    <div class="mb-3">
-        <label for="idade" class="form-label">Idade</label>
-        <input type="number" class="form-control" id="idade">
-        <div id="validacaoIdade" class="text-danger"></div>
-    </div>
 
-    <div class="mb-3">
-        <label for="naturalidade" class="form-label">Naturalidade</label>
-        <input type="text" class="form-control" id="naturalidade">
-        <div id="validacaoNaturalidade" class="text-danger"></div>
-    </div>
+    <footer class="fixed-bottom">
+        <div class="container">
+            <span class="text-muted">Place sticky footer content here.</span>
+        </div>
+    </footer>
 
-    <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="antecedentesCriminais">
-        <label class="form-check-label" for="antecedentesCriminais">Possui antecedentes criminais?</label>
-        <div id="validacaoAntecedentes" class="text-danger"></div>
-    </div>
-</form>
+    <script src="../html_javascript/html_javascrcipt.js"></script>
 
-<button onclick="cadastrar()" class="btn btn-primary">Submit</button>
+    <script src="validacoes.js"></script>
 
-<footer class="fixed-bottom">
-    <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
-    </div>
-</footer>
-
-<script src="../html_javascript/html_javascrcipt.js"></script>
-
-<script src="validacoes.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </body>
 
