--- a/validacao/validacao.html
+++ b/validacao/validacao.html
@@ -17,7 +17,7 @@
         <button type="button" class="btn btn-primary" onclick="capturarValorDoH1()">CAPTURAR H1</button>
         <button type="button" class="btn btn-primary" onclick="modificarValorDoH1()">MODIFICAR H1</button>
         <button type="button" class="btn btn-primary" onclick="pintarDeVermelho()">PINTAR H1</button>
-        <button type="button" class="btn btn-primary" onclick="centralizar()">PINTAR H1</button>
+        <button type="button" class="btn btn-primary" onclick="centralizar()">CENTRALIZAR</button>
     </div>
     <script src="validacao.js" async defer></script>
 </body>
