--- a/login/login.html
+++ b/login/login.html
@@ -12,51 +12,46 @@
 </head>
 
 <body>
-
     <p></p>
     <div class="row">
         <div class="col-sm">
 
         </div>
         <div class="col-sm">
-
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
+
                     <form>
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
-                        <div class="text-center text-danger" id="emailInvalido"></div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="primeiraSenha">
+                            <input type="password" class="form-control" id="exampleInputPassword1">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Confirmar Password</label>
-                            <input type="password" class="form-control" id="segundaSenha">
+                            <div id="alertaEmail" class="text-danger text-center"></div>
                         </div>
 
-                        <div class="text-center text-danger" id="senhaRepetida"></div>
-                        <div class="d-grid gap-1">
-                            <button onclick="registrar()" class="btn btn-primary">Registrar</button>
-                        </div>
+
                     </form>
+                    <div class="d-grid gap-1">
+
+                        <button onclick="login()" type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+
                 </div>
-
-
             </div>
-
-
-
         </div>
         <div class="col-sm">
 
         </div>
-    </div>
-    <script src="../js/validacao.js" async defer></script>
 
-    <script src="registro.js" async defer></script>
+    </div>
+
+    <script src="../js/validacao.js" async defer></script>
+    <script src="login.js" async defer></script>
 </body>
 
 </html>
