--- a/login/login.html
+++ b/login/login.html
@@ -50,6 +50,7 @@
 
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../js/validacao.js" async defer></script>
     <script src="login.js" async defer></script>
 </body>
