--- a/login/login.html
+++ b/login/login.html
@@ -8,51 +8,98 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <style>
+        .body-login {
+            background: rgb(100, 74, 135);
+            background: radial-gradient(circle, rgba(100, 74, 135, 1) 0%, rgba(91, 70, 141, 1) 50%, rgba(84, 66, 145, 1) 100%);
+            margin-top: 5%;
+        }
+
+        .card-login {
+            background: #F9F9FB;
+            border-radius:10px;
+            padding: 10px;
+            width: 25rem;
+
+        }
+
+        .button-login {
+            background: rgb(135,84,146);
+            background: linear-gradient(270deg, rgba(135,84,146,1) 0%, rgba(91,70,141,1) 50%, rgba(84,66,145,1) 100%);
+            font-size: 20px;
+            padding: 10px;
+        }
+        .texto-login{
+            color: #664986;
+        }
+        .card-footer{
+            padding: 20px;
+            font-size: 18px;
+        }
+    </style>
 </head>
 
-<body>
-    <p></p>
-    <div class="row">
-        <div class="col-sm">
+<body class="body-login">
 
+
+<p></p>
+<div class="row">
+    <div class="col-sm-3">
+
+    </div>
+    <div class="col-sm-6">
+        <div class="text-center">
+            <img src="../imagens/logo-design2.png" alt="Card image cap" width="200">
+        <p></p>
         </div>
-        <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-
-                    <form>
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div class="mb-3">
-                            <div id="alertaEmail" class="text-danger text-center"></div>
-                        </div>
-
-
-                    </form>
-                    <div class="d-grid gap-1">
-
-                        <button onclick="login()" type="submit" class="btn btn-primary">Submit</button>
+        <div class="d-flex justify-content-center">
+        <div class="card card-login">
+            <div class="card-body">
+                <p></p>
+                <h3 class="card-title text-center texto-login">Login</h3>
+                <p></p>
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3">
+                        <div id="alertaEmail" class="text-danger text-center"></div>
                     </div>
 
+
+                </form>
+                <div class="d-grid gap-1">
+
+                    <button onclick="login()" type="submit" class="btn btn-primary button-login">Login</button>
                 </div>
+
+            </div>
+            <div class="card-footer text-muted text-center">
+                Não possui uma conta? <a href="#" class="texto-login">Registre-se</a>
+
             </div>
         </div>
-        <div class="col-sm">
-
         </div>
 
     </div>
+    <div class="col-sm-3">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../js/validacao.js" async defer></script>
-    <script src="login.js" async defer></script>
+    </div>
+
+</div>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="../js/validacao.js" async defer></script>
+<script src="login.js" async defer></script>
 </body>
 
 </html>
