--- a/auth/registro/registro.html
+++ b/auth/registro/registro.html
@@ -34,24 +34,25 @@
                         <p></p>
                         <form>
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                <label for="email" class="form-label">Email address</label>
                                 <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
                             </div>
                             <div class="text-center text-danger" id="emailInvalido"></div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <label for="primeiraSenha" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="primeiraSenha">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Confirmar Password</label>
+                                <label for="segundaSenha" class="form-label">Confirmar Password</label>
                                 <input type="password" class="form-control" id="segundaSenha">
                             </div>
 
                             <div class="text-center text-danger" id="senhaRepetida"></div>
-                            <div class="d-grid gap-1">
-                                <button onclick="registrar()" class="btn btn-primary button-auth">Registrar</button>
-                            </div>
+
                         </form>
+                        <div class="d-grid gap-1">
+                            <button onclick="registrar()" class="btn btn-primary button-auth">Registrar</button>
+                        </div>
                     </div>
                     <div class="card-footer text-muted text-center">
                         Possui uma conta? <a href="../login/login.html" class="texto-auth">Login</a>
