--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -1,19 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 
 </head>
 <body>
-<div class="container">
-    <table id="table" class="table">
+<!--from https://bootstrapious.com/tutorial/sidebar/index5.html-->
+<div class="wrapper">
+    <!-- Sidebar Holder -->
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>Escolar APP</h3>
+        </div>
 
-    </table>
+        <ul class="list-unstyled components">
+            <li class="active">
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Tarefas</a>
+
+            </li>
+            <!--
+            <li>
+                <a href="#">About</a>
+                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>
+
+            </li>
+            <li>
+                <a href="#">Portfolio</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+
+-->
+            <li>
+                <a href="#gihubSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">GIT</a>
+                <ul class="collapse list-unstyled" id="gihubSubmenu">
+                    <li>
+                        <a href="https://github.com/pedro-rd-dev/siteuc15" target="_blank" class="article">SITE</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/rodrigues87/escolarapp" target="_blank" class="article">API</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+
+        <ul class="list-unstyled CTAs">
+            <li>
+                <a href="https://drive.google.com/drive/u/2/folders/1nL2PXZjMDxFYthlkYpO1Ua3geI4FiziG" class="article">Aulas</a>
+            </li>
+
+
+        </ul>
+    </nav>
+
+    <!-- Page Content Holder -->
+    <div id="content">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+
+                <button type="button" id="sidebarCollapse" class="navbar-btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-align-justify"></i>
+                </button>
+
+                <!--
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Page</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Page</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Page</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Page</a>
+                        </li>
+                    </ul>
+                </div>
+                -->
+            </div>
+        </nav>
+        <div class="container">
+            <div class="table-responsive">
+
+
+                <table id="table" class="table">
+
+                </table>
+            </div>
+        </div>
+
+    </div>
 </div>
+
+
 <script src="../js/jquery-3.5.1.min.js"></script>
+<!-- Bootstrap JS -->
+
+<script src="../tabelas/tabelas.js"> </script>
+
 <script src="tarefas.js"></script>
+
+<script src="../sidebar/sidebar.js"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+        crossorigin="anonymous"></script>
+
+
 </body>
 </html>
