--- a/auth/login/login.html
+++ b/auth/login/login.html
@@ -75,6 +75,7 @@
 
     <script src="../../js/jquery-3.5.1.min.js"></script>
     <script src="../../js/validacao.js" async defer></script>
+    <script src="loginRequests.js"></script>
     <script src="login.js" async defer></script>
 </body>
 
