--- a/tarefas/tarefas.html
+++ b/tarefas/tarefas.html
@@ -89,38 +89,25 @@
 
 
 
-
-                <!--
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Page</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Page</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Page</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Page</a>
-                        </li>
-                    </ul>
-                </div>
-                -->
             </div>
+
+
         </nav>
-        <div class="container">
-            <div class="table">
 
 
-                <table id="table" class="table">
-
-                </table>
-            </div>
-
+        <div class="menuItemAdd text-right">
+            <button type="button" class="btn btn-primary">+ Add</button>
 
         </div>
+
+
+
+
+
+
+            <div class="table">
+                <table id="table" class="table"></table>
+            </div>
 
     </div>
 </div>
