--- a/auth/registro/registro.html
+++ b/auth/registro/registro.html
@@ -47,6 +47,8 @@
                                 <input type="password" class="form-control" id="segundaSenha">
                             </div>
 
+                            <div class="text-center text-danger" id="alertaRegistro"></div>
+
                             <div class="text-center text-danger" id="senhaRepetida"></div>
 
                         </form>
@@ -67,7 +69,8 @@
 
         </div>
     </div>
-    <script src="../js/validacao.js" async defer></script>
+    <script src="../../js/jquery-3.5.1.min.js"></script>
+
 
     <script src="registro.js" async defer></script>
 </body>
