--- a/auth/registro/registro.html
+++ b/auth/registro/registro.html
@@ -73,6 +73,8 @@
 
 
     <script src="registro.js" async defer></script>
+    <script src="registroRequest.js" async defer></script>
+
 </body>
 
 </html>
